[gd_scene load_steps=2 format=3 uid="uid://doxush0lag2m1"]

[ext_resource type="Script" path="res://progg_22a.gd" id="1_fvr48"]

[node name="progg_122a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvr48")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 696.0
offset_bottom = 299.0

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 471.0
offset_right = 170.0
offset_bottom = 549.0
text = "calculate"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 474.0
offset_right = 400.0
offset_bottom = 552.0
text = "clear
"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 474.0
offset_right = 630.0
offset_bottom = 552.0
text = "exit"

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
